Criado a tabela quando adicionado uma nova tarefa

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <h4>Urgência:</h4>
                     <select name="status" id="inpStatus">
                         <option value="normal">normal</option>
-                        <option value="urgent">urgente</option>
-                        <option value="attention">atenção</option>option>
+                        <option value="urgente">urgente</option>
+                        <option value="atenção">atenção</option>option>
                     </select>
                 </div>
                 <div class="containerNewTask">
@@ -53,7 +53,6 @@
             <select id="status-task" >
                 <option value=""></option>
                 <option value="in progress">Em processo</option>
-                <option value="canceled">Concluidas</option>
                 <option value="done">Canceladas</option>
             </select>
 
@@ -62,11 +61,9 @@
     </div>
 
     <div id="containerList">
-        <table>
-            
-        </table>
+        
     </div>
 
-    <script src="src/script/script.js"></script>
+    <script type="module" src="src/script/script.js"></script>
 </body>
 </html>
