--- a/index.html
+++ b/index.html
@@ -45,6 +45,46 @@
         </div>
     </dialog>
 
+    <dialog id="editTaskDialog">
+        <div class="addTask">
+            <div class="title">
+                <h4>Título:</h4>
+                <input type="text" name="title" id="inpTitle" placeholder="Título">
+            </div>
+
+            <div class="descripion">
+                <h4>Descrição:</h4>
+                <input type="text" name="description" id="einpDescription" placeholder="Descrição">
+            </div>
+
+            <div class="date" >
+                <div class="selection-date">
+                    <h4>Data de Entrega:</h4>
+                    <input type="date" name="date" id="inpDate" placeholder="Data de Entrega">
+                </div>
+
+                <div class="selection-status">
+                    <h4>Urgência:</h4>
+                    <select name="status" id="einpStatus">
+                        <option value="normal">normal</option>
+                        <option value="urgente">urgente</option>
+                        <option value="atenção">atenção</option>option>
+                    </select>
+                </div>
+            </div>
+            <div class="containerEditTask" style="
+            margin-bottom: 0px;">
+                <div>
+                    <input type="submit" value="Salvar" id="saveTask">
+                </div>
+                <div>
+                    <input type="submit" value="Cancelar" id="cancel">
+                </div>
+            </div>
+
+        </div>   
+    </dialog>
+
     <div class="body-Header">
         <div class="head-title">
             <h1>Lista de Tarefa</h1>
