--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <h4>Urgência:</h4>
                     <select name="status" id="inpStatus">
                         <option value="normal">normal</option>
+                        <option value="atenção">atenção</option>
                         <option value="urgente">urgente</option>
-                        <option value="atenção">atenção</option>option>
                     </select>
                 </div>
                 <div id="containerNewTask">
